project/visa/test/assembler/error/undefined-macro.asm
macro var
  sleep
end
vra
nop
